manifests/prometheus/httproute.yaml
# This HTTPRoute routes traffic to the Pi-hole admin interface
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  name: prometheus-https-route
  namespace: monitoring
spec:
  hostnames:
  - prometheus.ashishverma.dev
  parentRefs:
  - name: envoy
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - filters:
    - requestRedirect:
        path:
          replaceFullPath: /query
          type: ReplaceFullPath
        statusCode: 302
      type: RequestRedirect
    matches:
    - path:
        type: Exact
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: prometheus-k8s
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
# Grafana HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "grafana.ashishverma.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
